[package]
name = "rust-maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }

[lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_error_doc = "allow"
module_name_repetitions = "allow"
